--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    background-color: lightgrey;
+}
 .post-thumb {
     float: left
 }
@@ -6,6 +9,8 @@
     display: block
     width:  300px;
     height: 300px;
+    border-style: solid;
+    border-width: 5px;
 }
 .links {
     margin: 40px auto;
